# find-github-prospects

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: copilot-extension-setup.md  fix-all-code-issues.md  url-scraping-plan.md
pytest_temp/: test_basic_search_integrationcurrent
pytest_temp/test_basic_search_integration1/: integration_test_cache.jsonl
pytest_temp/test_basic_search_integration2/: integration_test_cache.jsonl
repobird-leadgen/: .env.example  README.md  pyproject.toml  requirements.txt
repobird-leadgen/repobird_leadgen/: cli.py  contact_scraper.py  github_search.py  models.py  utils.py
repobird-leadgen/repobird_leadgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
repobird-leadgen/tests/: test_search.py
repobird_leadgen/: browser_checker.py  cli.py  config.py  contact_scraper.py  enricher.py  github_search.py  logging_setup.py  models.py  summarizer.py  url_processor.py  utils.py
scripts/: filter_issues_by_prs.py  lint.sh  update_cache_issue_numbers.py
tests/: test_cli.py  test_config.py  test_contact_scraper.py  test_init.py  test_models.py  test_search.py  test_summarizer.py  test_utils.py
