[project]
name = "repobird-leadgen"
version = "0.1.0"
description = "Lead‑gen automation for RepoBird marketing"
authors = [{name = "Ariel Frischer", email = "arielfrischer@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "PyGithub==2.2.0",
    "python-dotenv==1.0.0",
    "typer==0.9.0",
    "requests==2.32.0",
    "tqdm==4.66.2",
    "rich==13.7.1",
    "playwright==1.44.0",
    "litellm>=1.67.5",
    "pydantic>=2.11.4",
]

[project.scripts]
repobird-leadgen = "repobird_leadgen.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock",
    "ruff",
]

[tool.setuptools.packages.find]
# Explicitly find only the main package directory
include = ["repobird_leadgen"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require network/external services)",
    "unit: marks tests as unit tests (isolated, no external dependencies)",
]
# Default filter: run tests NOT marked as integration
filterwarnings = [
    "ignore::DeprecationWarning", # Example filter, add others if needed
]
addopts = "-m 'not integration'"

[tool.mypy]
python_version = "3.9"
# ignore_missing_imports = true # Removed in favor of installing type stubs
# Alternatively, specify per-module ignores:
# [[tool.mypy.overrides]]
# module = [
#     "dotenv",
#     "playwright.*",
#     "rich.*",
#     "github.*",
#     "tqdm", # Can ignore tqdm if types-tqdm isn't installed
# ]
# ignore_missing_imports = true
