[tool.poetry]
name = "repobird-leadgen"
version = "0.1.0"
description = "Lead\u2011gen automation for RepoBird marketing"
authors = ["YOUR NAME <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "2.2.0"
python-dotenv = "1.0.0"
typer = "0.9.0"
requests = "2.32.0"
tqdm = "4.66.2"
rich = "13.7.1"

[tool.poetry.scripts]
repobird-leadgen = "repobird_leadgen.cli:app"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require network/external services)",
    "unit: marks tests as unit tests (isolated, no external dependencies)",
]
